--- a/views/index.jade
+++ b/views/index.jade
@@ -19,7 +19,7 @@ html
 									|  system designed especially for your May Ball, June
 									|  Event or Garden Party. It is easy to use, and gives
 									|  your committee the power to quickly do everything 
-									|  they need to.
+									|  it needs to.
 
 								.row
 									.col-md-6
