Include icon colours in the update

--- a/assets/scss/partials/_components.scss
+++ b/assets/scss/partials/_components.scss
@@ -25,6 +25,16 @@
     font-size: 13px;
     line-height: 24px;
   }
+
+  .icon1 { 
+    background-color: $col--flat-highlight;
+  }
+  .icon2 { 
+    background-color: $col--flat-dark-blue;
+  }
+  .icon3 { 
+    background-color: $col--mint-green;
+  }
 }
 
 .whatboxsm {
