--- a/views/index.jade
+++ b/views/index.jade
@@ -33,15 +33,15 @@ html
 					// TODO: Better colours
 					.row
 						.col-sm-4.whatbox
-							span.fa.fa-rocket(style="background-color:red")
+							span.fa.fa-rocket.icon1
 							h4 Rock-solid speed
 							p Mabel will handle hundreds of simultaneous users without breaking a sweat. So you can rest easy on launch night knowing nothing can go wrong.
 						.col-sm-4.whatbox
-							span.fa.fa-moon-o(style="background-color:blue")
+							span.fa.fa-moon-o.icon2
 							h4 On the night
 							p No one likes queueing, which is why we’ve integrated a super fast ticket scanning system. Your guests will be through the door in record time.
 						.col-sm-4.whatbox
-							span.fa.fa-paint-brush(style="background-color:green")
+							span.fa.fa-paint-brush.icon3
 							h4 Make Mabel yours
 							p It’s easy to style Mabel to look exactly the way you want to, so your event’s theme can shine through when your guests buy their tickets.
 			section#intro
