--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2467,6 +2467,12 @@ footer {
   .whatbox p {
     font-size: 13px;
     line-height: 24px; }
+  .whatbox .icon1 {
+    background-color: #FF6B5C; }
+  .whatbox .icon2 {
+    background-color: #2980B9; }
+  .whatbox .icon3 {
+    background-color: #3CE78B; }
 
 .whatboxsm {
   text-align: left; }
