--- a/views/index.jade
+++ b/views/index.jade
@@ -12,20 +12,26 @@ html
 							p [Screenshots on a mac or something here]
 						.col-sm-6
 							.titlebox
-								.mabel-logo
-									h1 Mabel
+								h1.logo mabel#[span .]
+								//- h1.logo #[span m]abel
+								//- h1.logo Mabel#[span .]
+								h3 Ticketing for the future#[span .]
+								a(href="https://github.com/mabelticketing/mabel" target="_blank").action.one #[span.fa.fa-code] #[span.words Download]
+								a(href="#whatmain").action.two #[span.fa.fa-angle-down]&nbsp;#[span.words Learn&nbsp;more]
+							//- Please add alternate suggestions below:
+							//- h3 Your time's worth more than that.
+							//- h3 I bet you didn't even realise your ticketing system was crap.
 
-								p.big-central-text #[b Mabel] is a modern ticketing
-									|  system designed especially for your May Ball, June
-									|  Event or Garden Party. It is easy to use, and gives
-									|  your committee the power to quickly do everything 
-									|  it needs to.
+							//- .titlebox
+							//- 	.mabel-logo
+							//- 		h1 Mabel
 
-								.row
-									.col-md-6
-										a(href="https://github.com/mabelticketing/mabel" target="_blank").btn.btn-default.btn-lg #[span.fa.fa-code] source
-									.col-md-6
-										a(href="#whatmain").btn.btn-default.btn-lg #[span.fa.fa-angle-down] read more
+							//- 	p.big-central-text #[b Mabel] is a modern ticketing
+							//- 		|  system designed especially for your May Ball, June
+							//- 		|  Event or Garden Party. It is easy to use, and gives
+							//- 		|  your committee the power to quickly do everything 
+							//- 		|  it needs to.
+
 					div.bg(style="background-image:url(assets/img/bg2.jpg)")
 			section#whatmain
 				.container
