Make things reasonably responsive

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -13,3 +13,4 @@
 @import 'partials/buttons';
 @import 'partials/sections'; // e.g. <section>s
 @import 'partials/components'; // e.g. .card
+@import 'partials/mobile';
