--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2318,8 +2318,7 @@ h4 {
   letter-spacing: 1px; }
 
 h3 {
-  text-align: center;
-  margin-bottom: 50px; }
+  text-align: center; }
 
 a {
   text-decoration: none;
@@ -2377,7 +2376,8 @@ header .container {
       color: #ff6600; }
   header .container h3 {
     text-align: left;
-    color: #ECF0F1; }
+    color: #ECF0F1;
+    margin-bottom: 50px; }
   header .container .action {
     border-radius: 4px;
     font-size: 13px;
@@ -2389,7 +2389,8 @@ header .container {
     color: #ECF0F1;
     white-space: nowrap;
     padding: 10px 24px;
-    display: inline-block; }
+    display: inline-block;
+    margin: 12px; }
     header .container .action .fa {
       color: #ECF0F1;
       margin-right: 5px;
@@ -2406,7 +2407,6 @@ header .container {
         background-color: #20638f;
         border-color: #20638f; }
     header .container .action.two {
-      margin-left: 25px;
       border-color: #ECF0F1;
       background-color: transparent; }
       header .container .action.two:hover, header .container .action.two:hover .fa {
@@ -2442,36 +2442,19 @@ header .container {
   margin: auto;
   display: inline-block; }
 
-#whatmain {
+section {
   padding-top: 80px;
-  padding-bottom: 80px;
+  padding-bottom: 80px; }
+
+#whatmain, #whatsm, #creators {
   background-color: #f4f4f4; }
 
-#intro {
-  padding-top: 80px;
-  padding-bottom: 80px;
+#intro, #using {
   background-color: transparent; }
-
-#whatsm {
-  padding-top: 80px;
-  padding-bottom: 80px;
-  background-color: #f4f4f4; }
-
-#using {
-  padding-top: 80px;
-  padding-bottom: 80px;
-  background-color: transparent; }
-
-#creators {
-  padding-top: 80px;
-  padding-bottom: 80px;
-  background-color: #f4f4f4; }
 
 #more {
   font-size: 2em;
   text-align: center;
-  padding-top: 80px;
-  padding-bottom: 80px;
   background-color: #ff6600; }
   #more p {
     font-family: "Montserrat", sans-serif;
@@ -2489,6 +2472,7 @@ footer {
   footer p {
     text-align: center;
     margin: 17px;
+    margin-bottom: 0;
     font-size: 12px; }
   footer a, footer a:hover, footer a:active {
     text-decoration: underline;
@@ -2505,13 +2489,17 @@ footer {
   padding-left: 30px;
   padding-right: 30px; }
   .whatbox span {
-    font-size: 2.5em;
+    font-size: 30px;
     margin-top: 20px;
     margin-bottom: 20px;
     display: inline-block;
-    padding: 20px;
     color: white;
-    border-radius: 190px; }
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    line-height: 50px;
+    text-align: center;
+    vertical-align: middle; }
   .whatbox p {
     font-size: 13px;
     line-height: 24px; }
@@ -2524,22 +2512,42 @@ footer {
 
 .whatboxsm {
   text-align: left; }
-  .whatboxsm span {
-    font-size: 2.5em;
-    float: left;
-    height: 24px;
-    margin-right: 24px;
-    width: 28px; }
+  .whatboxsm .title {
+    height: 50px;
+    position: relative; }
+    .whatboxsm .title .fa {
+      font-size: 40px;
+      height: 50px;
+      width: 50px;
+      line-height: 50px;
+      text-align: center;
+      display: inline-block; }
+    .whatboxsm .title h4 {
+      position: absolute;
+      height: 50px;
+      display: table-cell;
+      vertical-align: middle;
+      top: 0;
+      left: 60px;
+      right: 0;
+      margin: 0; }
+      .whatboxsm .title h4:before {
+        content: " ";
+        display: inline-block;
+        height: 100%;
+        vertical-align: middle; }
+      .whatboxsm .title h4 .h {
+        display: inline-block;
+        vertical-align: middle; }
   .whatboxsm p {
-    margin-left: 50px; }
+    margin-left: 60px; }
 
 .thumb {
-  text-align: center;
-  margin-top: 60px; }
+  text-align: center; }
   .thumb img {
     border-radius: 50%;
     width: 200px;
-    height: 200px; }
+    max-width: 100%; }
 
 .card {
   background-color: white;
@@ -2586,7 +2594,9 @@ footer {
 
 .pricing-card {
   margin-top: 40px;
-  text-align: center; }
+  text-align: center;
+  border: 1px solid #c8c8c8;
+  padding-bottom: 15px; }
   .pricing-card h6 {
     color: #2C3E50; }
   .pricing-card p {
@@ -2602,8 +2612,41 @@ footer {
   height: 100%;
   z-index: -1;
   background-repeat: no-repeat;
-  background-size: 100%;
+  background-size: cover;
   background-attachment: fixed;
   background-position: center bottom; }
+
+.screenshot-mobile {
+  display: none; }
+
+@media (max-width: 992px) {
+  header .container {
+    padding-top: 15px;
+    padding-bottom: 15px; }
+    header .container .titlebox, header .container h1.logo, header .container h3 {
+      text-align: center; }
+
+  .screenshot-desktop {
+    display: none; }
+
+  .screenshot-mobile {
+    display: block; }
+
+  section {
+    padding-top: 30px;
+    padding-bottom: 20px; }
+
+  .whatbox .fa {
+    margin-top: 10px;
+    margin-bottom: 0px; }
+  .whatbox h4 {
+    margin-bottom: 5px; }
+
+  .whatboxsm p {
+    margin: 15px;
+    margin-top: 5px; }
+
+  .thumb {
+    margin-top: 0px; } }
 
 /*# sourceMappingURL=main.css.map */
