--- a/assets/scss/partials/_components.scss
+++ b/assets/scss/partials/_components.scss
@@ -12,13 +12,17 @@
   padding-right: 30px;
 
   span {
-    font-size: 2.5em;
+    font-size: 30px;
     margin-top: 20px;
     margin-bottom: 20px;
     display: inline-block;
-    padding: 20px;
     color: white;
-    border-radius: 190px;
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    line-height: 50px;
+    text-align: center;
+    vertical-align: middle;
   }
 
   p {
@@ -40,27 +44,52 @@
 .whatboxsm {
   text-align: left;
 
-  span {
-    font-size: 2.5em;
-    float: left;
-    height: 24px;
-    margin-right: 24px;
-    width: 28px;
+  .title {
+    height:50px;
+    position:relative;
+
+    .fa {
+      font-size: 40px;
+      height: 50px;
+      width:  50px;
+      line-height: 50px;
+      text-align: center;
+      display:inline-block;
+    }
+    h4 {
+      position: absolute;
+      height:50px;display: table-cell; vertical-align: middle;
+      top: 0;
+      left: 60px;
+      right: 0;
+      margin:0;
+
+      &:before {
+          content: " ";
+          display: inline-block;
+          height: 100%;
+          vertical-align: middle;
+      }
+          
+      & .h {
+          display:inline-block;
+          vertical-align:middle;
+      }
+    }
   }
 
   p {
-    margin-left: 50px;
+    margin-left: 60px;
   }
 }
 
 .thumb {
   text-align: center;
-  margin-top: 60px;
 
   img {
     border-radius: 50%;
     width: 200px;
-    height: 200px;
+    max-width:100%;
   }
 }
 
@@ -126,6 +155,8 @@
 .pricing-card {
   margin-top: 40px;
   text-align: center;
+  border: 1px solid $col--light-grey;
+  padding-bottom: 15px;
 
   h6 {
     color: $col--title;
@@ -152,7 +183,7 @@
   height: 100%;
   z-index: -1;
   background-repeat: no-repeat;
-  background-size: 100%;
+  background-size: cover;
   background-attachment: fixed;
   background-position: center bottom;
 }
